fixtures/cs-jwt-03/bad/sign-named-import-none.ts
import { sign as s } from "jsonwebtoken";

const secret = process.env.JWT_SECRET ?? "dev-secret";

export function signToken(payload: object) {
	return s(payload, secret, { algorithm: "none" });
}
